# udgam

agents/langgraph-arxiv-research/: main.py  pyproject.toml
backend/: app.py  extensions.py  openapi.yaml  postman.json  pyproject.toml  pytest.ini
backend/data/: data
backend/heatmap_agent/: client.py  example.py  heatmap_agent.py  validation_score.py
backend/heatmap_agent/data/: district_data.csv  district_population.csv  education_data.csv  factor_weights.csv  healthcare_data.csv  infrastructure_index.csv  internet_penetration.csv  startup_ecosystem.csv
backend/heatmap_agent/nodes/: data_fetcher.py  factor_identifier.py  heatmap_generator.py  location_scorer.py  md_parser.py  sector_classifier.py
backend/migrations/versions/: 0981ee608d52_add_timestamps_to_idea.py  4d7f9a23e470_add_short_desc_to_idea.py  50ffd709c1e8_.py  6ae712bfa0b9_add_notepad_title.py  b75f2627ecb1_initial_migration.py  ea94ce657cff_add_idea_notepad_model.py
backend/models/: models.py
backend/routes/: auth.py  documents.py  ideas.py  market.py  notepads.py  users.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_ideas.py  test_market_research.py
backend/utils/: idea_to_markdown.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx
frontend/components/app-sidebar/: account-actions.tsx  app-sidebar.tsx  idea-switcher.tsx
frontend/components/geo-map/: circle.tsx  heatmap.tsx  store.ts
frontend/components/idea-board/: graph.ts  idea-board.tsx  idea-node.tsx  index.ts
frontend/components/idea-flow/: create-idea-dialog-content.tsx  create-idea-form.tsx  debug-panel.tsx  idea-edge.tsx  idea-flow.tsx  idea-node.tsx  index.ts  store.ts  types.ts
frontend/components/lean-canvas-editor/: index.ts  lean-canvas-editor.tsx
frontend/components/notepad/: editor-menus.tsx  index.ts  notepad.tsx
frontend/components/provider/: Provider.tsx
frontend/components/skeletons/: dashboard-skeleton.tsx
frontend/components/ui/: dialog.tsx  form.tsx  sidebar.tsx
frontend/hooks/: use-block-navigation.ts
frontend/hooks/api-hooks/: use-auth.ts  use-ideas.ts  use-notepads.ts
frontend/hooks/idea-board/: graph.ts  index.ts  use-controls.ts  (+1 more)
frontend/lib/: axios.ts  handle-api-error.tsx
(+29 files in other folders)
