[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["adityanandanx <nandanaditya985@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pytest = "^8.3.5"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-cors = "^5.0.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
