[project]
name = "Udgam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
