[project]
name = "Udgam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "ibm-watsonx-ai>=1.3.11",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-ibm>=0.3.10",
    "langgraph>=0.3.34",
    "markdown>=3.8",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
