[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph_react_agent"
version = "0.1.5"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ibm>=0.3.3",
    "python-dotenv>=1.0.1",
    "ibm-watsonx-ai>=1.1.22,<3.13",
    "langgraph>=0.2,<0.3",
    "statsmodels>=0.14.4",
    "numpy<2",
    "pytest>=8.3.3",
    "langchain-community>=0.3.17",
    "duckduckgo-search>=7.3.2",
    "markdownify>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_react_agent"]
